examples/test/testpolicy19597.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19597
  namespace: namespace7
spec:
  podSelector:
    matchLabels:
      key22: value30
      key15: value8
      key12: value45
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value47
          key43: value49
          key20: value48
      podSelector:
        matchLabels:
          key20: value24
          key36: value17
          key24: value32
